# AIYO

./: .env  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README.zh.md  docker-compose.yml  pyproject.toml
.aiyo/skills/gerrit-review/: SKILL.md
.aiyo/skills/gerrit-review/references/: commands.md  report-template.md
.aiyo/skills/jira-analyze/: SKILL.md
.aiyo/skills/jira-batchscan/: SKILL.md
.aiyo/skills/jira-batchscan/references/: config.md
.aiyo/skills/opengrok/: SKILL.md
.github/workflows/: python-package.yml  python-publish.yml  release.yml
libs/aiyo/: README.md  pyproject.toml
libs/aiyo/src/aiyo/: __init__.py  config.py  mcp.py
libs/aiyo/src/aiyo/agent/: agent.py  exceptions.py  history.py  middleware.py  middleware_arg_normalization.py  middleware_logging.py  middleware_vision.py  misc.py  mode.py  stats.py  tool_display.py
libs/aiyo/src/aiyo/tools/: __init__.py  _markers.py  _sandbox.py  filesystem.py  image.py  interactive.py  misc.py  pdf.py  shell.py  skills.py  tasks.py  todo.py  tool_meta.py  web.py
libs/aiyo/src/ext/: config.py
libs/aiyo/src/ext/clients/: __init__.py  confluence_memory.py
libs/aiyo/src/ext/infra/: __init__.py  analyze_memory.py  analyze_models.py  credentials.py
libs/aiyo/src/ext/tools/: __init__.py  _health_cache.py  analyze_mode_tools.py  analyze_tools.py  confluence_tools.py  gerrit_tools.py  jira_tools.py  middleware.py  opengrok_tools.py
src/aiyo/: __init__.py  agent.py  cli.py  config.py  exceptions.py  history.py  middleware.py  repl.py  slash.py  stats.py
src/aiyo/agent/: agent.py  history.py  middleware_arg_normalization.py  middleware_base.py  middleware_cancel.py  middleware_compaction.py  middleware_logging.py  middleware_plan.py  middleware_stats.py  middleware_vision.py  stats.py
src/aiyo/bridge/: __init__.py  agent.py  bus.py  messages.py  soul.py  wire.py
src/aiyo/cli/: __init__.py  __main__.py  cmd_prompt.py  cmd_repl.py  export.py  info.py  mcp.py  toad.py  vis.py  web.py
src/aiyo/runner/: __init__.py  runner.py
src/aiyo/session/: __init__.py  agent.py  history.py  middleware_base.py  middleware_cancel.py  middleware_compaction.py  middleware_logging.py  middleware_stats.py  session.py  stats.py
src/aiyo/tools/: __init__.py  _sandbox.py  exceptions.py  filesystem.py  image.py  interactive.py  misc.py  shell.py  skills.py  tasks.py  todo.py  web.py
src/aiyo/ui/: __init__.py  print.py  shell.py
src/aiyo/ui/print/: __init__.py  visualize.py
src/aiyo/ui/shell/: __init__.py  console.py  echo.py  prompt.py  slash.py  visualize.py
src/aiyo/utils/: __init__.py  envvar.py  signals.py  slashcmd.py  subprocess_env.py  term.py
src/aiyo_cli/: __init__.py  cmd_prompt.py  cmd_repl.py  shell.py
src/aiyo_cli/ui/: __init__.py  completer.py  middleware.py  shell.py  theme.py
src/aml/: config.py
src/aml/tools/: __init__.py  confluence_tools.py  gerrit_tools.py  jira_tools.py
src/ext/: config.py
src/ext/tools/: __init__.py  confluence_tools.py  gerrit_tools.py  jira_tools.py
tests/: test_agent.py  test_agent_system_prompt.py  test_analyze_mode_tools.py  test_config.py  test_confluence_memory.py  test_confluence_tools.py  test_filesystem.py  test_gerrit_tools.py  test_interactive.py  test_jira_tools.py  test_mcp.py  test_middleware_chain.py  test_plan_mode.py  test_sandbox.py  test_shell.py  test_skills_cache.py  test_skills_descriptions.py  test_tasks.py  test_todo.py  test_tools_registry.py  test_web.py
